Center aligned content, added fonts, changed background, small minor fixes.

--- a/recipes/stylesalmon.css
+++ b/recipes/stylesalmon.css
@@ -17,9 +17,11 @@
 }
 
 body{
-        background-size: cover;    
-        background-repeat: no-repeat;
-        background-image: url(../Photos/gradient.webp);
+    background-attachment: fixed;
+    background-image:linear-gradient(to right bottom, black, #424242, #330066, rgb(104, 47, 104));
+    font-size: large;
+    font-family: sans-serif;
+    font-size: 25px;
 }
 
 #Ingredients{
